--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -20,7 +20,23 @@
 </header>
 
 <main>
-    <p>This page will contain information about the TechCon 2024 conference.</p>
+    <article>
+        <section>
+            <h2>History</h2>
+            <p>TechCon began in 2010 as a small gathering of tech enthusiasts and has since grown into a global event attracting thousands of attendees from around the world.</p>
+        </section>
+
+        <section>
+            <h2>Mission</h2>
+            <p>Our mission is to bring together technology leaders, innovators, and learners to share knowledge, build networks, and shape the future of the tech industry.</p>
+        </section>
+
+        <section>
+            <h2>Past Speakers</h2>
+            <p>We’ve had the honor of hosting renowned speakers such as Ada Lovelace AI Foundation's CEO, Elon Turing, and software pioneer Dr. Linus Hopper.</p>
+            <img src="media/past_speakers.jpg" alt="Photos of past TechCon keynote speakers standing on stage">
+        </section>
+    </article>
 </main>
 
 <footer>
